--- a/style.css
+++ b/style.css
@@ -5,20 +5,25 @@
 } */
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Montserrat Alternates";
+  background: #a08ca5;
 }
-
 /*  Cabeçalho: altura 100px; borda inferior 1px sólida e na cor #000; espaçamento externo inferior de 40px */
 header {
   height: 100px;
-  border-bottom: 1px solid #000;
+  border-bottom: 2px solid #000;
   margin-bottom: 40px;
 }
 
 /* Texto do cabeçalho: letras maiúsculas; espaçamento externo inferior 0 */
 h1 {
+  font-family: "Montserrat Alternates";
   text-transform: uppercase;
   margin-bottom: 0;
+}
+
+header p {
+  font-family: "Montserrat Alternates";
 }
 
 /* Seção dos cartões: espaçamento externo superior e inferior 0; espaçamento externo laterais automáticas; display block; largura máxima de 1024 px; largura 100% */
@@ -33,13 +38,15 @@ section {
 .card {
   display: inline-block;
   margin: 10px;
-  border: 1px solid #000;
+  border: 1px solid rgba(0, 0, 0, 0.0);
+  border-radius: 10px;
   vertical-align: top;
   max-width: 100%;
 }
 
 /* Cartão (imagem):   display block; largura 300px; altura 300px */
 .card img {
+  border-radius: 500px;
   display: block;
   width: 300px;
   height: 300px;
@@ -50,6 +57,8 @@ section {
   width: 300px;
   height: auto;
   display: inline-block;
+  text-align: center;
+  /* font-weight: 600; */
 }
 
 /* Cartão (sumário): tamanho da fonte 18px; espaçamento interno 10px; */
@@ -65,8 +74,12 @@ section {
 
 /* Cartão (citação): cor #777; estilo da fonte itálico  */
 .card details blockquote {
-  color: #777;
   font-style: italic;
+  background-color:  #682678;
+  padding: 8px;
+  border-radius: 10px;
+  color: white;
+  /* color: rgb(73, 69, 69); */
 }
 
 @media (max-width: 768px) {
@@ -77,19 +90,16 @@ section {
 
   h1 {
     font-size: 36px;
-
   }
 
   .card {
     display: block;
     margin: 20px 10px;
-
   }
 
   .card img {
     width: 100%;
     height: 100%;
-    
   }
 
   .card details {
@@ -104,7 +114,7 @@ section {
     font-size: 14px;
   }
 }
-  
+
 /* Cabeçalho: espaçamento externo inferior 20px; altura 200px */
 /* Texto do cabeçalho: tamanho da fonte 36px */
 /* Cartão: display block; espaçamento externo superior e inferior 20px; espaçamento externo laterais 10px; */
